updated README; fix for dark mode toggle outline; changed error colour in dark mode

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -41,10 +41,6 @@ header {
           }
         }
       }
-
-      .navbar-toggler:focus {
-        outline: none;
-      }
     }
 
     .linkedin {
